# bonnetje-daemon

./: .env.template  Cargo.toml  bonnetje.service  upload-to-pi.sh
src/: main.rs
