[package]
name = "bonnetje-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
env_logger = "0.11.8"
escpos = { version = "0.17.0", features = [
  "full",
] }
log = "0.4.28"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = [
  "derive",
] }
serde_json = "1.0.145"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH",
]
